// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders as expected 1`] = `
.c0 {
  display: inline-block;
}

.c0 a,
.c0 button {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #26A826;
  display: inline-block;
}

.c0 a .c1,
.c0 button .c1 {
  margin-right: 5px;
  position: relative;
  vertical-align: middle;
}

.c0 a:hover,
.c0 button:hover {
  cursor: pointer;
  color: #006300;
}

.c0 a:focus,
.c0 button:focus {
  color: rgba(0,0,0,0.9);
  background-color: #FFDA7F;
  outline: none;
}

.c0 button {
  background-color: transparent;
  border: none;
  padding: 0;
}

<div
  className="c0"
  data-component="link"
  disabled={false}
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <span
      className="carbon-link__content"
    >
      test
    </span>
  </a>
</div>
`;

exports[`Link when component has classic theme should render correct style 1`] = `
.c0 {
  display: inline-block;
}

.c0 a,
.c0 button {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #00805D;
  display: inline-block;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #255BC7;
}

.c0 a .c1,
.c0 button .c1 {
  margin-right: 5px;
  position: relative;
  vertical-align: middle;
  top: -2px;
}

.c0 a:hover,
.c0 button:hover {
  cursor: pointer;
  color: #006045;
}

.c0 a .c1,
.c0 button .c1 {
  color: #255BC7;
}

.c0 a:hover,
.c0 button:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #004B87;
}

.c0 a:hover .c1,
.c0 button:hover .c1 {
  color: #004B87;
}

.c0 a:focus,
.c0 button:focus {
  outline: none;
}

.c0 button {
  background-color: transparent;
  border: none;
  padding: 0;
}

<div
  className="c0"
  data-component="link"
  disabled={false}
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
    tabIndex="0"
  >
    <span
      className="carbon-link__content"
    >
      test
    </span>
  </a>
</div>
`;

exports[`Link when component has classic theme should render correct style when disabled 1`] = `
.c0 {
  display: inline-block;
}

.c0 a,
.c0 button {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #00805D;
  display: inline-block;
  color: #003349;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #255BC7;
  pointer-events: none;
}

.c0 a .c1,
.c0 button .c1 {
  margin-right: 5px;
  position: relative;
  vertical-align: middle;
  top: -2px;
}

.c0 a:hover,
.c0 button:hover {
  cursor: pointer;
  color: #006045;
}

.c0 a:hover,
.c0 button:hover,
.c0 a:focus,
.c0 button:focus {
  cursor: not-allowed;
  color: #003349;
}

.c0 a .c1,
.c0 button .c1 {
  color: #255BC7;
}

.c0 a:hover,
.c0 button:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #004B87;
}

.c0 a:hover .c1,
.c0 button:hover .c1 {
  color: #004B87;
}

.c0 a:focus,
.c0 button:focus {
  outline: none;
}

.c0 a:hover,
.c0 button:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  color: #255BC7;
}

.c0 a:hover .c1,
.c0 button:hover .c1 {
  color: #255BC7;
}

.c0 button {
  background-color: transparent;
  border: none;
  padding: 0;
}

<div
  className="c0"
  data-component="link"
  disabled={true}
>
  <a
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
    tabIndex="-1"
  >
    <span
      className="carbon-link__content"
    >
      test
    </span>
  </a>
</div>
`;
